feat: add batch approval simulations and path coverage